# logcaster

./: .env-example  .gitignore  Makefile  README.md  pyproject.toml
dev_django_project/: manage.py
dev_django_project/dev_django_project/: asgi.py  settings.py  urls.py  wsgi.py
easylog/: discord.py  formatters.py  handlers.py
easylog/settings/: _environment.py
logcaster/: discord.py  exceptions.py  formatters.py  handlers.py  telegram.py  utils.py
logcaster/discord_utils/: abstraction.py  discord_client.py  models.py
logcaster/settings/: _models.py
src/: formatters.py  handlers.py
src/settings/: _models.py
tests/: conftest.py  test_env_setup.py
tests/discord_utils/: test_client.py  test_embed.py
tests/formatters/: test_base_formatter.py  test_discord_formatters.py  test_telegram_formatter.py
tests/handlers/: test_discord_async_handler.py  test_discord_webhook_handler.py  test_telegram_async_handler.py  test_telegram_handler.py
