[project]
name = "easylog"
version = "0.1.0"
description = ""
authors = [
    {name = "LeandroDeJesus-S",email = "jstleandro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "discord-webhook (>=1.4.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

